--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <groupId>io.github.lama06</groupId>
     <artifactId>schneckenhaus</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
     <modelVersion>4.0.0</modelVersion>
     <name>Schneckenhaus-Plugin</name>
     <url>https://github.com/Lama06/Schneckenhaus</url>
@@ -45,12 +45,14 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <debug>false</debug>
                 <jarOutputDirectory>${project.build.directory}</jarOutputDirectory>
             </properties>
         </profile>
         <profile>
             <id>dev</id>
             <properties>
+                <debug>true</debug>
                 <jarOutputDirectory>server/plugins</jarOutputDirectory>
             </properties>
         </profile>
