--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,9 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>src/main/java</directory>
+            </resource>
         </resources>
         <plugins>
             <plugin>
