--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -36,4 +36,4 @@ chest:
 custom: { }
 
 # Don't change this! Doing so will cause data corruption.
-data_version: ${project.version}
+data_version: 2.0.0 // TODO
