--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: io.github.lama06.schneckenhaus.SchneckenPlugin
 description: Makes it possible to enter shulker boxes and carry your house around with you like a snail.
 version: 2.0.0
 api-version: 1.20
-website: ${project.url}
+website: https://github.com/Lama06/Schneckenhaus
 author: Lama06
 commands:
   schneckenhaus:
