--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,7 +7,7 @@
 
 # Spigot page: https://www.spigotmc.org/resources/schneckenhaus.116315/
 # Source code available on GitHub: https://github.com/Lama06/Schneckenhaus
-# Contact the author (bugs, feature requests etc.): andreasprues36@gmail.com
+# Contact the author (bugs, feature requests etc.): andreasprues36@gmail.com or GitHub
 # If you enjoy the plugin, consider making a donation on PayPal
 # If you agree, your donation will be mentioned on the plugin's websites
 # Edit the configuration while the server is turned off
