--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Schneckenhaus
 main: io.github.lama06.schneckenhaus.SchneckenPlugin
 description: Makes it possible to enter shulker boxes and carry your house around with you like a snail.
-version: 2.6.0
+version: 2.8.0
 api-version: 1.21
 website: https://github.com/Lama06/Schneckenhaus
 author: Lama06
@@ -18,6 +18,7 @@ permissions:
       schneckenhaus.craft: true
       schneckenhaus.enter: true
       schneckenhaus.command.*: true
+      schneckenhaus.create_shell_copies: true
   schneckenhaus.craft:
     description: Allows to craft snail shells
     default: true
@@ -26,3 +27,9 @@ permissions:
     default: true
   schneckenhaus.bypass_theft_prevention:
     default: op
+  schneckenhaus.create_shell_copies:
+    description: Create copies of a snail shell in the snail shell menu
+    default: true
+  schneckenhaus.transfer_ownership:
+    description: Allow players to transfer their ownership of a snail shell to others
+    default: true
