--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Schneckenhaus
 main: io.github.lama06.schneckenhaus.SchneckenPlugin
 description: Makes it possible to enter shulker boxes and carry your house around with you like a snail.
-version: 2.10.0
+version: 2.11.0
 api-version: 1.21
 website: https://github.com/Lama06/Schneckenhaus
 author: Lama06
@@ -42,4 +42,8 @@ permissions:
     default: true
   schneckenhaus.transfer_ownership:
     description: Allow players to transfer their ownership of a snail shell to others
+    default: true
+  schneckenhaus.lock:
+    default: true
+  schneckenhaus.shells_in_enderchest:
     default: true
