--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,5 @@ version: ${project.version}
 api-version: 1.21
 website: https://github.com/Lama06/Schneckenhaus
 author: Lama06
+loadbefore:
+  - WorldEdit
