--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     </dependencies>
 
     <build>
+        <defaultGoal>package</defaultGoal>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
